// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItemInputToggle should render correctly 1`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-1"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--overlay"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box
      </i>
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Checkbox
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 2`] = `
<li
  aria-checked="true"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-2"
  role="menuitemradio"
  tabindex="-1"
>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay rmd-toggle__icon--checked"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </i>
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Radio 1
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 3`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-3"
  role="menuitemradio"
  tabindex="-1"
>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </i>
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Radio 2
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 4`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item rmd-input-toggle-menu-item--switch"
  id="menu-id-4"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-switch rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
  >
    <span
      class="rmd-switch__ball"
    />
  </span>
  <span
    class="rmd-list-item__text"
  >
    Switch
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 5`] = `
<li
  aria-checked="true"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-1"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--overlay rmd-toggle__icon--checked"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box
      </i>
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Checkbox
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 6`] = `
<li
  aria-checked="true"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-2"
  role="menuitemradio"
  tabindex="-1"
>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay rmd-toggle__icon--checked"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </i>
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Radio 1
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 7`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-3"
  role="menuitemradio"
  tabindex="-1"
>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </i>
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Radio 2
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 8`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item rmd-input-toggle-menu-item--switch"
  id="menu-id-4"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-switch rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
  >
    <span
      class="rmd-switch__ball"
    />
  </span>
  <span
    class="rmd-list-item__text"
  >
    Switch
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 9`] = `
<li
  aria-checked="true"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-1"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-list-item__text"
  >
    Checkbox
  </span>
  <span
    class="rmd-icon--after rmd-list-item__addon rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--overlay rmd-toggle__icon--checked"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box
      </i>
    </span>
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 10`] = `
<li
  aria-checked="true"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-2"
  role="menuitemradio"
  tabindex="-1"
>
  <span
    class="rmd-list-item__text"
  >
    Radio 1
  </span>
  <span
    class="rmd-icon--after rmd-list-item__addon rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay rmd-toggle__icon--checked"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </i>
    </span>
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 11`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-3"
  role="menuitemradio"
  tabindex="-1"
>
  <span
    class="rmd-list-item__text"
  >
    Radio 2
  </span>
  <span
    class="rmd-icon--after rmd-list-item__addon rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </i>
    </span>
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 12`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-list-item--clickable rmd-input-toggle-menu-item rmd-input-toggle-menu-item--switch"
  id="menu-id-4"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-list-item__text"
  >
    Switch
  </span>
  <span
    class="rmd-switch rmd-icon--after rmd-list-item__addon"
  >
    <span
      class="rmd-switch__ball"
    />
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 13`] = `
<li
  aria-checked="true"
  class="rmd-list-item rmd-list-item--extra-large rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-1"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--overlay rmd-toggle__icon--checked"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        check_box
      </i>
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Checkbox
  </span>
  <span
    class="rmd-text-icon-spacing rmd-icon--after rmd-list-item__addon rmd-list-item__addon--bottom rmd-list-item__addon--media"
  >
    <span
      data-testid="addon"
    />
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 14`] = `
<li
  aria-checked="true"
  class="rmd-list-item rmd-list-item--extra-large rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-2"
  role="menuitemradio"
  tabindex="-1"
>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay rmd-toggle__icon--checked"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </i>
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Radio 1
  </span>
  <span
    class="rmd-text-icon-spacing rmd-icon--after rmd-list-item__addon rmd-list-item__addon--bottom rmd-list-item__addon--media"
  >
    <span
      data-testid="addon"
    />
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 15`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--extra-large rmd-list-item--clickable rmd-input-toggle-menu-item"
  id="menu-id-3"
  role="menuitemradio"
  tabindex="-1"
>
  <span
    class="rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-toggle rmd-input-toggle-menu-item__toggle"
  >
    <span
      class="rmd-toggle__icon rmd-toggle__icon--circle rmd-toggle__icon--overlay"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        radio_button_checked
      </i>
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Radio 2
  </span>
  <span
    class="rmd-text-icon-spacing rmd-icon--after rmd-list-item__addon rmd-list-item__addon--bottom rmd-list-item__addon--media"
  >
    <span
      data-testid="addon"
    />
  </span>
</li>
`;

exports[`MenuItemInputToggle should render correctly 16`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--extra-large rmd-list-item--clickable rmd-input-toggle-menu-item rmd-input-toggle-menu-item--switch"
  id="menu-id-4"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-switch rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before"
  >
    <span
      class="rmd-switch__ball"
    />
  </span>
  <span
    class="rmd-list-item__text"
  >
    Switch
  </span>
  <span
    class="rmd-text-icon-spacing rmd-icon--after rmd-list-item__addon rmd-list-item__addon--bottom rmd-list-item__addon--media"
  >
    <span
      data-testid="addon"
    />
  </span>
</li>
`;
